SUBDIRS = read_colors advanced_colors babymatch babyshapes flags imageid imagename missing_letter paintings scales doubleentry geography sounds chronos

xmldir = $(pkgdatadir)/@PACKAGE_DATA_DIR@

xml_in_files = \
	advanced_colors.xml.in \
	algebra_by.xml.in \
	algebra_group.xml.in \
	algebra_guesscount.xml.in \
	algebra_minus.xml.in \
	algebra_plus.xml.in \
	algebramenu.xml.in \
	algorithm.xml.in \
	anim.xml.in \
	babymatch.xml.in \
	babyshapes.xml.in \
	billard.xml.in \
	ballcatch.xml.in \
	boards.xml.in \
	canal_lock.xml.in \
	chess.xml.in \
	chess_computer.xml.in \
	chess_movelearn.xml.in \
	chess_partyend.xml.in \
	chronos.xml.in \
	click_on_letter.xml.in \
	clickgame.xml.in \
	clockgame.xml.in \
	colors.xml.in \
	colors_group.xml.in \
	computer.xml.in \
	doubleentry.xml.in \
	draw.xml.in \
	enumerate.xml.in \
	erase.xml.in \
	experience.xml.in \
	fifteen.xml.in \
	followline.xml.in \
	fun.xml.in \
	geography.xml.in \
	gletters.xml.in \
	hanoi.xml.in \
	hexagon.xml.in \
	imageid.xml.in \
	imagename.xml.in \
	leftright.xml.in \
	maze.xml.in \
	maze2DRelative.xml.in \
	maze3D.xml.in \
	mazeInvisible.xml.in \
	melody.xml.in \
	memory.xml.in \
	menu.xml.in \
	missing_letter.xml.in \
	money.xml.in \
	money_cents.xml.in \
	paintings.xml.in \
	paratrooper.xml.in \
	planegame.xml.in \
	pythontest.xml.in \
	railroad.xml.in \
	railroad.xml.in \
	read_colors.xml.in \
	reading.xml.in \
	readingh.xml.in \
	readingv.xml.in \
	redraw.xml.in \
	redraw_symmetrical.xml.in \
	reversecount.xml.in \
	searace.xml.in \
	searace1player.xml.in \
	scalesboard.xml.in \
	smallnumbers.xml.in \
	smallnumbers2.xml.in \
	submarine.xml.in \
	superbrain.xml.in \
	target.xml.in \
	traffic.xml.in \
	watercycle.xml.in \
	wordsgame.xml.in

xml_DATA = $(xml_in_files:.xml.in=.xml)

@INTLTOOL_XML_RULE@



