noinst_PROGRAMS = gcompris

gcompris_SOURCES = main.c

gcompris_CFLAGS = -x c -fpascal-strings
gcompris_LDFLAGS = -framework Carbon -framework Cocoa

EXTRA_DIST = \
	build-gtk.sh \
	fonts.conf \
	GCompris.icns \
	gcompris.png \
	gcompris.svg \
	glibconfig.h \
	Info-gnustep.plist \
	Info.plist \
	pangorc \
	PkgInfo

