## Process this file with automake to produce Makefile.in

SUBDIRS = \
	administration-activity \
	advanced_colors-activity \
	algebra_by-activity \
	algebra_guesscount-activity \
	algebra_minus-activity \
	algebra_plus-activity \
	algorithm-activity \
	anim-activity \
	awele-activity \
	babymatch-activity \
	babyshapes-activity \
	ballcatch-activity \
	bargame-activity \
	billard-activity \
	canal_lock-activity \
	chat-activity \
	chess_computer-activity \
	chess_movelearn-activity \
	chess_partyend-activity \
	chronos-activity \
	click_on_letter-activity \
	clickanddraw-activity \
	clickgame-activity \
	clockgame-activity \
	colors-activity \
	connect4-2players-activity \
	connect4-activity \
	crane-activity \
	details-activity \
	doubleentry-activity \
	draw-activity \
	drawnumber-activity \
	electric-activity \
	enumerate-activity \
	erase-activity \
	erase_2clic-activity \
	erase_clic-activity \
	fifteen-activity \
	findit-activity \
	followline-activity \
	geo_country-activity \
	geography-activity \
	gletters-activity \
	gnumch-equality-activity \
	gnumch-factors-activity \
	gnumch-inequality-activity \
	gnumch-multiples-activity \
	gnumch-primes-activity \
	goocanvas gcompris boards \
	guessnumber-activity \
	hangman-activity \
	hanoi-activity \
	hanoi_real-activity \
	hexagon-activity \
	hydroelectric-activity \
	imageid-activity \
	imagename-activity \
	leftright-activity \
	lightsoff-activity \
	login-activity \
	magic_hat_minus-activity \
	magic_hat_plus-activity \
	maze-activity \
	maze2DRelative-activity \
	maze3D-activity \
	mazeInvisible-activity \
	melody-activity \
	memory-activity \
	memory_add-activity \
	memory_add_minus-activity \
	memory_add_minus_mult_div-activity \
	memory_add_minus_mult_div_tux-activity \
	memory_add_minus_tux-activity \
	memory_add_tux-activity \
	memory_div-activity \
	memory_div_tux-activity \
	memory_enumerate-activity \
	memory_minus-activity \
	memory_minus_tux-activity \
	memory_mult-activity \
	memory_mult_div-activity \
	memory_mult_div_tux-activity \
	memory_mult_tux-activity \
	memory_sound-activity \
	memory_sound_tux-activity \
	memory_tux-activity \
	memory_wordnumber-activity \
	missing_letter-activity \
	money-activity \
	money_back-activity \
	money_back_cents-activity \
	money_cents-activity \
	mosaic-activity \
	paintings-activity \
	paratrooper-activity \
	penalty-activity \
	photohunter-activity \
	planegame-activity \
	pythontemplate-activity \
	pythontest-activity \
	railroad-activity \
	read_colors-activity \
	readingh-activity \
	readingv-activity \
	redraw-activity \
	redraw_symmetrical-activity \
	reversecount-activity \
	scalesboard-activity \
	scalesboard_weight-activity \
	searace-activity \
	searace1player-activity \
	smallnumbers-activity \
	smallnumbers2-activity \
	submarine-activity \
	sudoku-activity \
	superbrain-activity \
	tangram-activity \
	target-activity \
	traffic-activity \
	tuxpaint-activity \
	watercycle-activity \
	wordprocessor-activity \
	wordsgame-activity

EXTRA_DIST = runit.sh \
	createit.sh
