
xmldir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/chronos

xml_in_files = \
	board1_0.xml.in \
	board1_1.xml.in \
	board2_0.xml.in \
	board3_0.xml.in \
	board3_1.xml.in \
	board3_2.xml.in \
	board3_3.xml.in \
	board3_4.xml.in \
	board4_0.xml.in \
	board4_1.xml.in \
	board4_2.xml.in \
	board4_3.xml.in

xml_DATA = $(xml_in_files:.xml.in=.xml)

@INTLTOOL_XML_RULE@



